# feakin-web

./: .eslintrc.json  .gitignore  Cargo.toml  Procfile  README.md  RustConfig  coco.yml  jest.config.ts  jest.preset.js  lerna.json  nx.json  package-lock.json  package.json  tsconfig.base.json  workspace.json
.github/workflows/: cd.yml  ci.yml  fkl-cd.yml  nodejs.yml
_fixtures/: decode.drawio  mermaid.txt
cases/: cargo-tracker.fkl  ticket-booking.fkl
crates/: Cargo.toml
crates/server/: README.md
docs/: README.md  _config.yml  development.md  feakin.uml  issues.md  spike.md
docs/samples/: feakin.excalidraw  gojs.json  sample.drawio  sample.excalidraw  source-target.excalidraw
drawio/: package-lock.json  package.json  stencil.config.ts
drawio/sample/: functional.drawio
drawio/src/: components.d.ts  index.html
feakin-converter/: .gitignore  package-lock.json  package.json
feakin-converter/.webpack/: webpack.config.base.js
feakin-parser/: package-lock.json  package.json
feakin-render/: README.md  package-lock.json  package.json
server/: Cargo.toml  README.md
server/server/: Cargo.toml  Procfile  README.md
server/server/src/: command.rs  handler.rs  live_coding.rs  livegraph.rs  living_action.rs  living_action_dto.rs  living_command.rs  living_edit_handler.rs  living_edit_server.rs  living_response.rs  living_ws.rs  main.rs  pairing.rs
server/server/src/living/: live_coding.rs  live_crdt.rs  mod.rs
server/server/src/model/: living_command.rs  living_model.rs  living_request.rs  living_response.rs
server/server/static/: index.html
(+86 files in other folders)
