[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13"
actix-files = "0.6"
actix-web = "4"
actix-web-actors = "4.1.0"
actix-ws = "0.2.5"
awc = "3"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CRDT
diamond-types = { version = "1.0.0", features = ["serde"] }
smallvec = { version = "1.8.0", features = ["union"] }
js-sys = "0.3.59"

#
similar = "2.1.0"

derive_more = "0.99.15"
env_logger = "0.9.0"
futures-util = { version = "0.3.24", default-features = false, features = ["std"] }
log = "0.4"
rand = "0.8"

tokio = { version = "1.21.0", features = ["rt", "macros", "sync", "time"] }


[dev-dependencies]
actix-rt = "2.1.0"
